post method for leaderBoard

--- a/src/app/modules/home/pages/aboutus/aboutus.component.html
+++ b/src/app/modules/home/pages/aboutus/aboutus.component.html
@@ -10,8 +10,8 @@
             <img style="height: 80%;" src="https://cdn1.iconfinder.com/data/icons/data-science-1-1/512/20-512.png"
               alt="icon"></div>
           <div style="height: 58.5%;" class="w-100 d-flex flex-column align-items-center justify-content-start">
-            <p class="role">Angular developer front-end</p>
-            <p class="role">Scalatore a mani nude</p>
+            <p class="role text-center">Angular developer front-end</p>
+            <p class="role text-center">Scalatore a mani nude</p>
           </div>
         </div>
         <div style="width: 25%; border-right: #a86c5d 1px solid;" class="h-100">
@@ -22,8 +22,8 @@
             <img style="height: 80%;" src="https://cdn1.iconfinder.com/data/icons/data-science-1-1/512/20-512.png"
               alt="icon"></div>
           <div style="height: 58.5%;" class="w-100 d-flex flex-column align-items-center justify-content-start">
-            <p class="role">Front-end developer esperto in RxJs</p>
-            <p class="role">Innamorato da sempre di Trivia</p>
+            <p class="role text-center">Front-end developer esperto in RxJs</p>
+            <p class="role text-center">Innamorato da sempre di Trivia</p>
           </div>
         </div>
         <div style="width: 25%; border-right: #a86c5d 1px solid;" class="h-100">
@@ -34,8 +34,8 @@
             <img style="height: 80%;" src="https://cdn1.iconfinder.com/data/icons/data-science-1-1/512/20-512.png"
               alt="icon"></div>
           <div style="height: 58.5%;" class="w-100 d-flex flex-column mt-0 align-items-center justify-content-start">
-            <p class="role">Software developer Angular</p>
-            <p class="role">Pirata informatico</p>
+            <p class="role text-center">Software developer Angular</p>
+            <p class="role text-center">Pirata informatico</p>
           </div>
         </div>
         <div style="width: 25%; border-right: #a86c5d 1px solid;" class="h-100">
@@ -46,8 +46,8 @@
             <img style="height: 80%;" src="https://cdn1.iconfinder.com/data/icons/data-science-1-1/512/20-512.png"
               alt="icon"></div>
           <div style="height: 58.5%;" class="w-100 d-flex flex-column align-items-center justify-content-start">
-            <p class="role"> Front-end software developer </p>
-            <p class="role hobby">Ballerina di danze tribali</p>
+            <p class="role text-center"> Front-end software developer </p>
+            <p class="role hobby text-center">Ballerina di danze tribali</p>
           </div>
         </div>
         <div style="width: 25%;" class="h-100 ">
@@ -58,12 +58,12 @@
             <img style="height: 80%;" src="https://cdn1.iconfinder.com/data/icons/data-science-1-1/512/20-512.png"
               alt="icon"></div>
           <div style="height: 58.5%;" class="w-100 d-flex flex-column align-items-center justify-content-start">
-            <p class="role">Javascript developer front-end</p>
-            <p class="role">Sognatore a occhi chiusi</p>
+            <p class="role text-center">Javascript developer</p>
+            <p class="role text-center">Sognatore a occhi chiusi</p>
           </div>
         </div>
       </div>
        <game-footer class="w-100 footer" style="position: absolute; bottom: 0;"></game-footer>
-    </div> 
-     
+    </div>
+
   </div>
