--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,4 +1,5 @@
-<header class="d-flex justify-content-center align-items-center">
+<header class="d-flex justify-content-between align-items-center container">
+  <div></div>
   <svg routerLink='' routerLinkActive="router-link-active"  version="1.1" id="Livello_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
      viewBox="0 0 28 14.2" style="enable-background:new 0 0 28 14.2; width: 150px" xml:space="preserve">
   <style type="text/css">
@@ -117,5 +118,5 @@
     </g>
   </g>
   </svg>
-  <button class="btn" routerLink="/leaderboard"> CLASSIFICA</button>
+  <button class="btn text-white-50 align-self-end" routerLink="/leaderboard"> LEADERBOARD</button>
 </header>
