--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -118,5 +118,5 @@
     </g>
   </g>
   </svg>
-  <button class="btn text-white-50 align-self-end" routerLink="/leaderboard"> LEADERBOARD</button>
+  <button class="btn btn-lg text-white-50 align-self-end" routerLink="/leaderboard"> LEADERBOARD</button>
 </header>
