--- a/src/app/modules/ranking/pages/leaderboard/leaderboard.component.html
+++ b/src/app/modules/ranking/pages/leaderboard/leaderboard.component.html
@@ -1,4 +1,4 @@
-<div style="height: 85vh; width: 100vw;" class="d-flex justify-content-center align-items-center">
+<div style="height: 85vh; width: 100vw;" class="d-flex justify-content-center align-items-center mt-3">
   <div class="d-flex position-absolute">
     <div id="centraBox" class="d-flex justify-content-center align-items-start rounded text-white p-3">
       <table class="table justify-content-center">
