--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,7 +1,6 @@
-<header class="d-flex justify-content-between align-items-center container">
-  <div></div>
+<header class="d-flex justify-content-center align-items-center container">
   <svg routerLink='' routerLinkActive="router-link-active"  version="1.1" id="Livello_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-     viewBox="0 0 28 14.2" style="enable-background:new 0 0 28 14.2; width: 150px" xml:space="preserve">
+     viewBox="0 0 28 14.2" style="enable-background:new 0 0 28 14.2; width: 120px" xml:space="preserve" class="pt-3">
   <style type="text/css">
     .st0{fill:#013033;}
     .st1{fill:#A86C5D;}
