--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,7 +1,7 @@
-// button{
-//   position: absolute;
-//   right: 50px;
-// }
+button{
+  position:fixed;
+  right: 120px;
+}
 header{
   height: 15vh;
 }
